commit hukahi